--- a/Healthtechbd/App.config
+++ b/Healthtechbd/App.config
@@ -11,7 +11,11 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
-      </provider></providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
+    </providers>
   </entityFramework>
-<connectionStrings><add name="ContextDb" connectionString="server=localhost;user id=root;database=wpf_healthtechbd;Convert Zero Datetime=True" providerName="MySql.Data.MySqlClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="ContextDb" connectionString="server=localhost;user id=root;database=wpf_healthtechbd;Convert Zero Datetime=True" providerName="MySql.Data.MySqlClient" />
+    <add name="Model1" connectionString="server=localhost;user id=root;database=wpf_healthtechbd" providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
+</configuration>
