--- a/Healthtechbd/App.config
+++ b/Healthtechbd/App.config
@@ -15,7 +15,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ContextDb" connectionString="server=localhost;user id=root;database=wpf_healthtechbd;Convert Zero Datetime=True" providerName="MySql.Data.MySqlClient" />
+    <add name="contextd_db" connectionString="server=localhost;user id=root;database=wpf_healthtechbd;Convert Zero Datetime=True" providerName="MySql.Data.MySqlClient" />
     <add name="Model1" connectionString="server=localhost;user id=root;database=wpf_healthtechbd" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 </configuration>
