--- a/Healthtechbd/App.config
+++ b/Healthtechbd/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="contextd_db" connectionString="server=localhost;user id=root;database=wpf_healthtechbd;Convert Zero Datetime=True" providerName="MySql.Data.MySqlClient" />
+    <add name="contextd_db" connectionString="server=localhost;user id=root;CHARSET=utf8;database=wpf_healthtechbd;Convert Zero Datetime=True" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 </configuration>
