--- a/Healthtechbd/packages.config
+++ b/Healthtechbd/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Caliburn.Micro" version="1.5.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.4.0.1044" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
