--- a/Healthtechbd/Healthtechbd.csproj
+++ b/Healthtechbd/Healthtechbd.csproj
@@ -192,8 +192,7 @@
     <Compile Include="Medicines.xaml.cs">
       <DependentUpon>Medicines.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Model\ApiModel\OnlinePatients.cs" />
-    <Compile Include="Model\ApiPatients.cs" />
+    <Compile Include="Model\ApiModel\ViewPatients.cs" />
     <Compile Include="Model\DiagnosisTestModel.cs" />
     <Compile Include="Model\MedicineModel.cs" />
     <Compile Include="Model\TestModel.cs" />
