save online diagnosis template to local

--- a/Healthtechbd/Healthtechbd.csproj
+++ b/Healthtechbd/Healthtechbd.csproj
@@ -194,6 +194,7 @@
     </Compile>
     <Compile Include="Model\ApiModel\ViewDiagnosisTemplates.cs" />
     <Compile Include="Model\ApiModel\ViewPatients.cs" />
+    <Compile Include="Model\ApiModel\ViewPrescriptions.cs" />
     <Compile Include="Model\DiagnosisTestModel.cs" />
     <Compile Include="Model\MedicineModel.cs" />
     <Compile Include="Model\TestModel.cs" />
